Keep the menu open after clicking so the user does not have to keep expanding the menu when selecting options.

--- a/TOSExpViewer/Views/SettingsView.xaml
+++ b/TOSExpViewer/Views/SettingsView.xaml
@@ -16,6 +16,7 @@
                     <Setter Property="cal:Message.Attach" Value="[Click] = [Execute]" />
                     <Setter Property="IsCheckable" Value="{Binding IsCheckable}" />
                     <Setter Property="IsChecked" Value="{Binding IsChecked}" />
+                    <Setter Property="StaysOpenOnClick" Value="{Binding StaysOpenOnClick}"></Setter>
                 </Style>
             </MenuItem.ItemContainerStyle>
             <MenuItem.ItemTemplate>
