--- a/TOSExpViewer/App.xaml
+++ b/TOSExpViewer/App.xaml
@@ -1,7 +1,9 @@
 ﻿<Application x:Class="TOSExpViewer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:tosExpViewer="clr-namespace:TOSExpViewer">
+             xmlns:tosExpViewer="clr-namespace:TOSExpViewer"
+             xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=PresentationFramework"
+             xmlns:ui="clr-namespace:TOSExpViewer.UI">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,6 +16,19 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <ui:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
+            <ui:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+
+            <!--Design time hack to set the background color so we can work on user controls in dark VS theme-->
+            <Style TargetType="{x:Type UserControl}">
+                <Style.Triggers>
+                    <Trigger Property="componentModel:DesignerProperties.IsInDesignMode" Value="true">
+                        <Setter Property="Background" Value="White" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
