--- a/TOSExpViewer/Views/ExpCardCalculatorView.xaml
+++ b/TOSExpViewer/Views/ExpCardCalculatorView.xaml
@@ -39,8 +39,8 @@
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Row="0" Grid.Column="0" Text="Total Base Exp: " />
                     <TextBlock Grid.Row="1" Grid.Column="0" Text="Total Class Exp: " />
-                    <TextBlock Grid.Row="0" Grid.Column="1" x:Name="TotalBaseExperience" Text="{Binding TotalBaseExperience}" HorizontalAlignment="Right" />
-                    <TextBlock Grid.Row="1" Grid.Column="1" x:Name="TotalClassExperience" Text="{Binding TotalClassExperience}" HorizontalAlignment="Right" />
+                    <TextBlock Grid.Row="0" Grid.Column="1" x:Name="TotalBaseExperience" Text="{Binding TotalBaseExperience, StringFormat={}{0:N0}}" HorizontalAlignment="Right" />
+                    <TextBlock Grid.Row="1" Grid.Column="1" x:Name="TotalClassExperience" Text="{Binding TotalClassExperience, StringFormat={}{0:N0}}" HorizontalAlignment="Right" />
                 </Grid>
             </StackPanel>
         </ScrollViewer>
