--- a/TOSExpViewer/Views/ExpCardCalculatorView.xaml
+++ b/TOSExpViewer/Views/ExpCardCalculatorView.xaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance Type=viewModels:ExpCardCalculatorViewModel, IsDesignTimeCreatable=True}"
              cal:Bind.AtDesignTime="True" 
-             Width="165" Height="325">
+             Width="165" Height="400">
     <UserControl.Resources>
         <DataTemplate x:Key="ExpCardTemplate" DataType="model:ExpCard">
             <Grid>
@@ -32,15 +32,29 @@
                     <Grid.RowDefinitions>
                         <RowDefinition />
                         <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Total Base Exp: " />
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Total Class Exp: " />
-                    <TextBlock Grid.Row="0" Grid.Column="1" x:Name="TotalBaseExperience" Text="{Binding TotalBaseExperience, StringFormat={}{0:N0}}" HorizontalAlignment="Right" />
-                    <TextBlock Grid.Row="1" Grid.Column="1" x:Name="TotalClassExperience" Text="{Binding TotalClassExperience, StringFormat={}{0:N0}}" HorizontalAlignment="Right" />
+
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Level" />
+                    <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding BaseLevel}" />
+
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Total Base Exp: " />
+                    <TextBlock Grid.Row="1" Grid.Column="1" x:Name="TotalBaseExperience" Text="{Binding TotalBaseExperience, StringFormat={}{0:N0}}" HorizontalAlignment="Right" />
+                    
+                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Total Class Exp: " />
+                    <TextBlock Grid.Row="2" Grid.Column="1" x:Name="TotalClassExperience" Text="{Binding TotalClassExperience, StringFormat={}{0:N0}}" HorizontalAlignment="Right" />
+
+                    <TextBlock Grid.Row="3" Grid.Column="0" Text="Base Level: " />
+                    <TextBlock Grid.Row="3" Grid.Column="1" x:Name="PotentialBaseLevel" Text="{Binding BaseExperienceCardData.PotentialLevel}" HorizontalAlignment="Right" />
+                    
+                    <TextBlock Grid.Row="4" Grid.Column="0" Text="Base Percent: " />
+                    <TextBlock Grid.Row="4" Grid.Column="1" x:Name="PotentialBasePercent" Text="{Binding BaseExperienceCardData.CurrentPercent, StringFormat={}{0:N4}}" HorizontalAlignment="Right" />
                 </Grid>
             </StackPanel>
         </ScrollViewer>
